Added streaming transmission for input and output streams.